fixed table columns alignment removed consent partial

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,3 +59,18 @@ body {
     content:"*";
     color:red;
 }
+
+/* Table column classes */
+.PersonalNumberTable,
+.LocalPhoneNumberTable,
+.CityPhoneNumberTable,
+.RoomTable {
+    text-align: center;
+}
+
+.table th,
+.table td {
+    padding: 0.75rem;
+    vertical-align: middle !important;
+    border: 1px solid #dee2e6 !important;
+}
